[project]
name = "toposter"
version = "0.1.0"
dependencies = [
    "typer>=0.9.0",
    "opencv-python-headless>=4.4.0.46",
    "pillow>=8.4.0"
]

[project.scripts]
toposter = "toposter.cli:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]